--- a/lang/en.json
+++ b/lang/en.json
@@ -90,7 +90,7 @@
     "Category Note": "Category Note",
     "Choose file": "Choose file",
     "Code": "Code",
-    "Codeshaper": "Codeshaper",
+    "Riverine Technologies": "Riverine Technologies",
     "Company": "Company",
     "Company Name": "Company Name",
     "Compnay Tagline": "Compnay Tagline",
