--- a/lang/es.json
+++ b/lang/es.json
@@ -91,7 +91,7 @@
   "Category Note": "Categoría Nota",
   "Choose file": "Elija el archivo",
   "Code": "Código",
-  "Codeshaper": "creador de códigos",
+  "Riverine Technologies": "creador de códigos",
   "Company": "Compañía",
   "Company Name": "nombre de empresa",
   "Compnay Tagline": "Lema de la empresa",
