--- a/lang/fr.json
+++ b/lang/fr.json
@@ -91,7 +91,7 @@
   "Category Note": "Remarque sur la catégorie",
   "Choose file": "Choisir le fichier",
   "Code": "Code",
-  "Codeshaper": "Forme de code",
+  "Riverine Technologies": "Forme de code",
   "Company": "Compagnie",
   "Company Name": "Nom de l'entreprise",
   "Compnay Tagline": "Slogan de l'entreprise",
