--- a/lang/zh.json
+++ b/lang/zh.json
@@ -91,7 +91,7 @@
   "Category Note": "类别说明",
   "Choose file": "选择文件",
   "Code": "代码",
-  "Codeshaper": "代码塑造者",
+  "Riverine Technologies": "代码塑造者",
   "Company": "公司",
   "Company Name": "公司名称",
   "Compnay Tagline": "公司标语",
